examples/test/testpolicy4530.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4530
  namespace: namespace138
spec:
  podSelector:
    matchLabels:
      key35: value24
      key38: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value41
          key2: value45
          key4: value1
      podSelector:
        matchLabels:
          key10: value46
          key21: value0
          key18: value19
